# Madeleine

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
docs/: deployment.md  getting-started.md  usage.md
k8s/: deployment.yaml
mneme/: __init__.py  cli.py
mneme/api/: server.py
mneme/core/: detector.py  exporter.py  ioc.py  orchestrator.py  parser.py  plugins.py  report.py  timeline.py
mneme/ecs/: schema.py
tests/fixtures/: windows.malfind.json  windows.netscan.json  windows.pslist.json  windows.svcscan.json
tests/unit/: test_detector.py  test_parser.py  test_server_security.py  test_timeline_ioc.py
